--- a/client/src/stylesheets/Register.css
+++ b/client/src/stylesheets/Register.css
@@ -2,7 +2,7 @@
     background: #fafafa;
     width: 100%;
     min-height: 100vh;
-    margin-top: -5rem;
+    margin-top: -3rem;
 }
 
 .signup-card {
