--- a/client/src/stylesheets/SearchResults.css
+++ b/client/src/stylesheets/SearchResults.css
@@ -1,5 +1,5 @@
 .search-results {
-    background: rgb(255, 249, 241);
+    background: #fafafa;
 }
 
 .search-results-main {
